improve makefile clean + make exceptions print their name