@@ -2,6 +2,6 @@ package ajav.exception;
 
 public class AircraftTypeNotFoundException extends RuntimeException {
 	public AircraftTypeNotFoundException(String aircraftType) {
-		super(String.format("AircraftTypeNotFoundException for aircraft type: ", aircraftType));
+		super("AircraftTypeNotFoundException: for aircraft type %s".formatted(aircraftType));
 	}
 }
