@@ -5,6 +5,6 @@ import ajav.model.Flyable;
 public class RegisterFlyableException extends RuntimeException {
 
     public RegisterFlyableException(Flyable flyable) {
-		super(String.format("Flyabe %s already registered", flyable));
+		super("RegisterFlyableException: Flyabe %s already registered".formatted(flyable));
 	}	
 }
