@@ -5,6 +5,6 @@ import ajav.model.Flyable;
 public class UnregisterFlyableException extends RuntimeException {
 
     public UnregisterFlyableException(Flyable flyable) {
-		super(String.format("Flyabe %s not found, cannot unregister?!", flyable));
+		super("UnregisterFlyableException: Flyabe %s not found, cannot unregister?!".formatted(flyable));
 	}	
 }
