@@ -2,6 +2,6 @@ package ajav.exception;
 
 public class WeatherTypeNotFoundException extends RuntimeException {
 	public WeatherTypeNotFoundException(String weatherType) {
-		super(String.format("WeatherTypeNotFoundException for weather type: ", weatherType));
+		super("WeatherTypeNotFoundException: for weather type: %s".formatted(weatherType));
 	}
 }
